<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textDelivery"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/delivery"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFood"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/food"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDelivery"
        />
    <ImageView
        android:id="@+id/menu"
        android:layout_width="250dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@+id/textFood"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_menu"
        />


    <EditText
        android:id="@+id/MainName"
        android:background="@color/white"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/MainAdres"
        android:background="@color/white"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:hint="@string/adres"
        app:layout_constraintTop_toBottomOf="@id/MainName"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        />
    <EditText
        android:id="@+id/MainNumber"
        android:background="@color/white"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:hint="@string/number"
        app:layout_constraintTop_toBottomOf="@id/MainAdres"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/black"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>