<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/cheek"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_cheek"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/application"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/application"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/cheek"
        />
    <TextView
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/application"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/order"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/userName"
        android:textStyle="italic"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/second_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order"
        app:layout_constraintStart_toEndOf="@id/UserName"
        android:text="..."
        android:textStyle="italic"
        android:textSize="25sp"
        />


    <TextView
        android:textColor="@color/black"
        android:id="@+id/deliveryAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/UserName"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/thisAdres"
        android:textStyle="italic"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/second_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_Name"
        app:layout_constraintStart_toEndOf="@id/deliveryAddress"
        android:text="..."
        android:textStyle="italic"
        android:textSize="25sp"
        />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/deliveryAddress"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/number"
        android:textStyle="italic"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/second_Adres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_Number"
        app:layout_constraintStart_toEndOf="@id/phoneNumber"
        android:text="..."
        android:textStyle="italic"
        android:textSize="25sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>